Resolves #18 - ListItemText-autowrap

--- a/smart-mcq-frontend/src/Form/index.css
+++ b/smart-mcq-frontend/src/Form/index.css
@@ -2,3 +2,8 @@
     display: flex;
     align-items: center;
 }
+
+.demo {
+    word-wrap: break-word;
+    
+}
